--- a/style.css
+++ b/style.css
@@ -1,6 +1,133 @@
+body{
+    background-image: url("baack.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    margin:0;
+
+
+
+}
 ul{
+    margin:0;
+    padding: 0;
+    width: 100%;
 }
 
-.menu{
-    width: 100px;
+.ui-menu {
+    width: fit-content;
+    font-size: large;
+    list-style: none;
+    padding: 5px;
+    display: block;
+    outline: 0;
+    text-align: center;
+    border-radius: 5px;
+    //background-image: url("backg.jpg");
+
+
+
 }
+
+.ui-menu .ui-menu-item-wrapper {
+    //position: relative;
+    //padding: 3px 1em 3px .4em;
+    color: black;
+    padding: 2px 1em 3px 1em;
+
+}
+.ui-menu .ui-menu-item {
+    margin-right: 20px;
+    text-align: center;
+    cursor: pointer;
+    /* support: IE10, see #8844 */
+    list-style-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");
+}
+
+
+
+#menu{
+    margin:0;
+    width: 99%;
+    height: 50px;
+    opacity: 0.8;
+}
+
+.ui-menu-item{
+    height: 20px;
+    margin: 10px 1em 5px 3em;
+}
+#ui-id-1{
+    margin-top: 5px;
+    text-align: center;
+    width: 100px;
+    font-size: 30px;
+
+
+
+}
+#ui-id-2{
+    margin-top: 5px;
+    margin-left: 50px;
+    text-align: center;
+    font-size: 30px;
+
+}
+
+
+#counter{
+    border: solid black 2px;
+    border-radius: 5px;
+    width: 100px;
+    padding: 2px 3em 5px 4em;
+    position: absolute;
+    bottom:0;
+    right: 1%;
+    background-color: whitesmoke;
+}
+
+ul li{
+    float: left;
+    width: fit-content;
+
+}
+ul li a{
+
+}
+
+ul li ul {
+    width: 300px;
+}
+ul li ul li ul li{
+    float: none;
+}
+
+h1{
+    font-size: 80px;
+    font-style: oblique;
+    position: absolute;
+    top:25%;
+    left:30%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+    text-shadow:
+            -1px -1px 0 #000,
+            5px -1px 0 #000,
+            -1px 4px 0 #000,
+            2px 1px 0 #000;
+
+
+}
+.color{
+    width: 100%;
+    background-color: #990000;
+    display: block;
+    height: 5px;
+    margin-top: 10px;
+}
+
+
+
+
+
