--- a/style.css
+++ b/style.css
@@ -72,13 +72,13 @@ ul{
     font-family: "Californian FB", cursive;
 }
 
-#counter{
+.counter{
     border: solid black 2px;
     border-radius: 5px;
     width: 100px;
     padding: 2px 3em 5px 4em;
     position: absolute;
-    bottom:0;
+    bottom:10px;
     right: 1%;
     background-color: whitesmoke;
 }
