--- a/hra_vlckova.css
+++ b/hra_vlckova.css
@@ -38,16 +38,7 @@
     align-items: center;
 }
 
-li{
-    padding-right: 40px;
-}
-
-ul{
-    list-style-type: none;
-    text-align: center;
-}
-
-ul button{
+.customButtons{
     color: #990000;
     background-color: #ffe6e6;
     border: 1px solid #990000;
@@ -148,7 +139,7 @@ ul button{
 }
 
 /*STOP WATCH*/
-.containerWatch{
+.containerWatch, .containerButtons{
     text-align: center;
     font-size: 30px;
     position: relative;
@@ -160,8 +151,4 @@ ul button{
     margin-left: 0;
     margin-top: 0;
     padding-top: 0;
-}
-
-.buttons{
-    text-align: center;
 }
