--- a/hra_vlckova.css
+++ b/hra_vlckova.css
@@ -1,5 +1,8 @@
 /*PUZZLE*/
 #container{
+    position: absolute;
+    top:35%;
+    left:35%;
     color: #990000;
     text-align: center;
     background-color: #ffe6e6;
@@ -35,7 +38,16 @@
     align-items: center;
 }
 
-.customButtons{
+li{
+    padding-right: 40px;
+}
+
+ul{
+    list-style-type: none;
+    text-align: center;
+}
+
+ul button{
     color: #990000;
     background-color: #ffe6e6;
     border: 1px solid #990000;
@@ -136,7 +148,7 @@
 }
 
 /*STOP WATCH*/
-.containerWatch, .containerButtons{
+.containerWatch{
     text-align: center;
     font-size: 30px;
     position: relative;
@@ -148,4 +160,8 @@
     margin-left: 0;
     margin-top: 0;
     padding-top: 0;
+}
+
+.buttons{
+    text-align: center;
 }
