--- a/style.css
+++ b/style.css
@@ -76,9 +76,32 @@ ul{
     font-size: 30px;
     font-family: "Californian FB", cursive;
 }
+#ui-id-16{
+    margin-top: 5px;
+    margin-left: 50px;
+    text-align: center;
+    font-size: 30px;
+    font-family: "Californian FB", cursive;
+}
 
 #ui-id-3 #ui-id-4 #ui-id-5 #ui-id-6 #ui-id-7 #ui-id-8 #ui-id-9 #ui-id-10 #ui-id-11 #ui-id-12 #ui-id-13 #ui-id-14 #ui-id-15{
     font-family: "Californian FB", cursive;
+}
+
+.meniny-container{
+    position: absolute;
+    top:35%;
+    left:35%;
+    font-style: oblique;
+    color: whitesmoke;
+    background-color: gray;
+    font-size: 20px;
+    border: solid black;
+    padding: 3px;
+    max-width: 1200px;
+    border-radius: 7px;
+    padding: 20px;
+
 }
 
 .counter{
