fixed breadcrumbs and whatever probably done

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ ul{
     //position: relative;
     //padding: 3px 1em 3px .4em;
     color: black;
-    padding: 2px 1em 3px 1em;
+    padding: 0 1em 3px 1em;
+    border-radius: 6px;
 }
 .ui-menu .ui-menu-item {
     margin-right: 20px;
@@ -242,9 +243,38 @@ td{
     text-align: center;
 }
 
+.breadcrumbs {
+    padding: 10px ;
+    font-family: 'Audiowide', cursive;
+    position: absolute;
+    top: 80px;
+}
 
 
+.breadcrumbs_item {
+    display: inline-block;
+    color: green;
+}
 
+.breadcrumbs_item:not(:last-of-type)::after {
+    content: '/';
+    margin: 0 5px;
+    color: red;
+}
+
+.breadcrumbs_link {
+    text-decoration: none;
+    color: #009578;
+}
+
+.breadcrumbs_link:hover {
+    text-decoration: underline;
+}
+
+.breadcrumbs_link--active {
+    color: lawngreen;
+    font-weight: 400;
+}
 
 
 
